jquery tekrar edirem

--- a/git.html
+++ b/git.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    <h1>Bashliq</h1>
+    <p id="demo">Slide up slide down css</p>
+    <button>tikla</button>
 
 
 
@@ -20,4 +21,4 @@
     <script src="git.js" async defer></script>
 </body>
 
-</html>
+</html>l
