--- a/git.html
+++ b/git.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="">
+    <script src="jquery/jquery-3.4.1.js"></script>
+    <script src="jquery/jquery-3.4.1.min.js"></script>
     <script src="git.js"></script>
 </head>
 
@@ -21,4 +23,4 @@
     <script src="git.js" async defer></script>
 </body>
 
-</html>l
+</html>
