bundan sonraki deyisiklik yeni branchda olacaq

--- a/git.html
+++ b/git.html
@@ -15,7 +15,8 @@
 
 <body>
     <p id="demo">Slide up slide down css</p>
-    <button>tikla</button>
+    <button class="bir">tikla</button>
+    <button class="iki">stop</button>
 
 
 
