--- a/git.html
+++ b/git.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <p id="demo">Slide up slide down css</p>
-    <button class="bir">tikla</button>
-    <button class="iki">stop</button>
+    <p id="demo">Slide up slide down css <input type="text" name="" value="xiyar" id=""></p>
+    <button class="bir">html</button>
+    <button class="iki">val</button>
 
 
 
