master branch. deyerleri deyisdim

--- a/git.html
+++ b/git.html
@@ -14,9 +14,12 @@
 </head>
 
 <body>
-    <p id="demo">Slide up slide down css</p>
-    <button class="bir">tikla</button>
-    <button class="iki">stop</button>
+    <p id="demo0">Slide up slide <b>bold</b> down css</p>
+    <p id="demo1">Slide up slide down css</p>
+    <input type="text" value="text tikla" id="demo2"><br><br><br>
+    <button class="bir">Html</button>
+    <button class="iki">text</button>
+    <button class="uc">value</button>
 
 
 
