--- a/git.html
+++ b/git.html
@@ -14,12 +14,9 @@
 </head>
 
 <body>
-    <p id="demo0">Slide up slide <b>bold</b> down css</p>
-    <p id="demo1">Slide up slide down css</p>
-    <input type="text" value="text tikla" id="demo2"><br><br><br>
-    <button class="bir">Html</button>
-    <button class="iki">text</button>
-    <button class="uc">value</button>
+    <p> <a href="http://www.google.com" id="demo" title="Google daxil ol">Google enter</a> </p>
+    <br><br>
+    <button class="btn">attr</button>
 
 
 
