append element yaratdim

--- a/git.html
+++ b/git.html
@@ -14,12 +14,8 @@
 </head>
 
 <body>
-    <p> <a href="http://www.google.com" id="demo" title="Google daxil ol">Google enter</a> </p>
     <br><br>
-    <button class="btn">attr</button>
-
-
-
+    <button class="btn" onmousedown="func()">append</button>
 
     <script src="git.js" async defer></script>
 </body>
