--- a/git.html
+++ b/git.html
@@ -14,10 +14,12 @@
 </head>
 
 <body>
+    <p> =(p element)= </p>
     <br><br>
+    <button id="btn">prepend</button>
     <button class="btn" onmousedown="func()">append</button>
 
-    <script src="git.js" async defer></script>
+    <!-- <script src="git.js" async defer></script> -->
 </body>
 
 </html>
