--- a/git.html
+++ b/git.html
@@ -14,10 +14,28 @@
 </head>
 
 <body>
-    <p> =(p element)= </p>
+    <style>
+        .cls {
+            width: 500px;
+            height: 100px;
+            background-color: unset;
+            color: yellowgreen;
+            font-size: 25px;
+        }
+        
+        .h4 {
+            width: 300px;
+            height: 100px;
+            padding: 10px;
+            margin: 12px;
+            background-color: aquamarine;
+            border: 3px solid darkgray;
+        }
+    </style>
+    <h4 class="h4">h4 tegi</h4>
     <br><br>
-    <button id="btn">prepend</button>
-    <button class="btn" onmousedown="func()">append</button>
+    <button id="btn">add</button>
+    <!-- <button class="btn" onmousedown="func()">append</button> -->
 
     <!-- <script src="git.js" async defer></script> -->
 </body>
