bugunluk ders bitdi

--- a/git.html
+++ b/git.html
@@ -32,12 +32,8 @@
             border: 3px solid darkgray;
         }
     </style>
-    <h4 class="h4">h4 tegi</h4>
-    <br><br>
-    <button id="btn">add</button>
-    <!-- <button class="btn" onmousedown="func()">append</button> -->
 
-    <!-- <script src="git.js" async defer></script> -->
+    <script src="git.js" async defer></script>
 </body>
 
 </html>
