--- a/git.html
+++ b/git.html
@@ -14,24 +14,20 @@
 </head>
 
 <body>
-    <style>
-        .cls {
-            width: 500px;
-            height: 100px;
-            background-color: unset;
-            color: yellowgreen;
-            font-size: 25px;
-        }
-        
-        .h4 {
-            width: 300px;
-            height: 100px;
-            padding: 10px;
-            margin: 12px;
-            background-color: aquamarine;
-            border: 3px solid darkgray;
-        }
-    </style>
+    <ul>
+        <li>
+            <div>
+                <span>
+                    SAPN BIR
+                </span>
+            </div>
+            <div>
+                <span>
+                    SPAN IKI
+                </span>
+            </div>
+        </li>
+    </ul>
 
     <script src="git.js" async defer></script>
 </body>
