siblings() , next() , nextAll() , nextUntil() , prev() , prevall() , prevUntil()   derslerini oyrendim

--- a/git.html
+++ b/git.html
@@ -16,16 +16,11 @@
 <body>
     <ul>
         <li>
-            <div>
-                <span>
-                    SAPN BIR
-                </span>
-            </div>
-            <div>
-                <span>
-                    SPAN IKI
-                </span>
-            </div>
+            <h1>h1</h1>
+            <p>p element 1</p>
+            <div>div</div>
+            <span>span</span>
+            <p>p element 2</p>
         </li>
     </ul>
 
